<resources>
    <string name="app_name">search</string>
    <string name="search_history_text">搜索历史</string>
    <string name="search_recommend_text">搜索推荐</string>
    <string name="search_hot_list_text">热搜榜</string>
    <string name="search_loading">正在加载…</string>
    <string name="search_music_vip">VIP</string>
    <string name="search_music_audition">试听</string>
    <string name="search_music_original">原唱</string>
    <string name="search_music_sq">SQ</string>
    <string name="music_result_popup_window_top">歌曲 :</string>
    <string name="music_next_play">下一首播放</string>
    <string name="music_collect">收藏到歌单</string>
    <string name="music_download">下载</string>
    <string name="music_comment">评论</string>
    <string name="music_share">分享</string>
    <string name="music_singer">歌手 :</string>
    <string name="music_album">专辑 :</string>
    <string name="music_video">相关视频</string>
    <string name="user_follow">关注</string>
    <string name="user_followed">已关注</string>
</resources>