<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popupwindow_music_setting"
    android:paddingTop="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_music_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/top_music_singer_name"
        app:layout_constraintTop_toTopOf="@+id/top_music_singer_name">

        <ImageView
            android:id="@+id/top_music_pic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/top_music_song_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/music_result_popup_window_top"
            android:textColor="@color/black_28"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/top_music_singer_name"
            app:layout_constraintStart_toEndOf="@id/top_music_pic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/top_music_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black_28"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/top_music_song_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/top_music_song_text"
            app:layout_constraintTop_toTopOf="@+id/top_music_song_text" />

        <TextView
            android:id="@+id/top_music_label_vip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_search_music_vip"
            android:paddingStart="6dp"
            android:paddingTop="3dp"
            android:paddingEnd="6dp"
            android:paddingBottom="3dp"
            android:text="@string/search_music_vip"
            android:textColor="@color/gold_vip"
            android:textSize="8sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/top_music_singer_name"
            app:layout_constraintStart_toEndOf="@id/top_music_pic"
            app:layout_constraintTop_toTopOf="@+id/top_music_singer_name" />

        <TextView
            android:id="@+id/top_music_singer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/gray_8e"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/top_music_label_vip"
            app:layout_constraintTop_toBottomOf="@+id/top_music_song_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@color/gray_f3"
        android:layout_marginTop="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_music_next_play"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_press_color">

        <ImageView
            android:id="@+id/ic_music_next_play"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_music_next_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_next_play"
            android:textColor="@color/black_28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_music_next_play"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_music_collect"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_press_color">

        <ImageView
            android:id="@+id/ic_music_collect"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_music_collect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_collect"
            android:textColor="@color/black_28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_music_collect"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_music_download"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_press_color">

        <ImageView
            android:id="@+id/ic_music_download"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_music_download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_download"
            android:textColor="@color/black_28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_music_download"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_music_comment"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_press_color">

        <ImageView
            android:id="@+id/ic_music_comment"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_music_comment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_comment"
            android:textColor="@color/black_28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_music_comment"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_music_share"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_press_color">

        <ImageView
            android:id="@+id/ic_music_share"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_music_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_share"
            android:textColor="@color/black_28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_music_share"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_music_singer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_press_color">

        <ImageView
            android:id="@+id/ic_music_singer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_music_singer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/item_music_singer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_singer"
            android:textColor="@color/black_28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_music_singer"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/item_music_singer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_music_singer_text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_music_album"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_press_color">

        <ImageView
            android:id="@+id/ic_music_album"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_music_album"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/item_music_album_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_album"
            android:textColor="@color/black_28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_music_album"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/item_music_album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_music_album_text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_music_video"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_press_color">

        <ImageView
            android:id="@+id/ic_music_video"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_music_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_video"
            android:textColor="@color/black_28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_music_video"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>