<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp"
    android:background="@drawable/item_press_color">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:src="@color/gray_f3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/item_search_music_name"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/item_search_music_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_2e"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/item_search_music_tns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        app:layout_constraintStart_toEndOf="@+id/item_search_music_name"
        app:layout_constraintTop_toTopOf="@+id/item_search_music_name"
        app:layout_constraintBottom_toBottomOf="@+id/item_search_music_name"
        android:layout_marginStart="2dp"/>

    <LinearLayout
        android:id="@+id/item_search_music_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_search_music_name"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/item_search_music_label_vip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/search_music_vip"
            android:textSize="8sp"
            android:textColor="@color/gold_vip"
            android:background="@drawable/bg_search_music_vip"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/item_search_music_label_audition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/search_music_audition"
            android:textSize="8sp"
            android:textColor="@color/themeColor"
            android:textStyle="bold"
            android:background="@drawable/bg_search_music_aud"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/item_search_music_label_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/search_music_original"
            android:textSize="8sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_search_music_ori"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/item_search_music_label_sq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/search_music_sq"
            android:textSize="8sp"
            android:textColor="@color/themeColor"
            android:textStyle="bold"
            android:background="@drawable/bg_search_music_aud"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/item_search_music_singer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/item_search_music_label"
        app:layout_constraintTop_toBottomOf="@+id/item_search_music_name"
        android:textSize="14sp"
        android:textColor="@color/themeColor"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/item_search_music_singer"
        app:layout_constraintTop_toTopOf="@+id/item_search_music_singer"
        app:layout_constraintBottom_toBottomOf="@+id/item_search_music_singer"
        android:text="-"
        android:textSize="16sp"
        android:layout_marginStart="4dp"/>

    <TextView
        android:id="@+id/item_search_music_al"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/text1"
        app:layout_constraintTop_toTopOf="@+id/text1"
        app:layout_constraintBottom_toBottomOf="@+id/text1"
        app:layout_constraintEnd_toStartOf="@+id/item_search_music_setting"
        android:textSize="14sp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/item_search_music_alia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_search_music_label"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/item_search_music_setting"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_music_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_press_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>